# ML-Models-UFM-2025-Airbnb-Pricing-competitionS

./: README.md
airbnb-price-determinant/: README.md  pyproject.toml
airbnb-price-determinant/conf/base/: catalog.yml  parameters_pricing.yml
airbnb-price-determinant/docs/source/: conf.py  index.rst
airbnb-price-determinant/notebooks/: 01_EDA.ipynb  02Hyperparameter_Tuning.ipynb  Pruebas.ipynb
airbnb-price-determinant/src/airbnb_price_determinant/: __init__.py  __main__.py  settings.py
airbnb-price-determinant/src/airbnb_price_determinant/pipelines/pricing/: __init__.py  nodes.py  pipeline.py
airbnb-price-determinant/tests/pipelines/data_science/: test_pipeline.py
airbnb-price-determinant/tests/pipelines/pricing/: test_pipeline.py
